--- a/index.html
+++ b/index.html
@@ -6,6 +6,101 @@
 <title>ChadiliZe — Telegram Mini App</title>
 <script src="https://telegram.org/js/telegram-web-app.js"></script>
 <style>
+/* ===== Night Grid (stunning edition) ===== */
+.ng-wrap{
+  position:relative; width:100%; height:100%; border-radius:14px; overflow:hidden;
+  /* animated ambience behind the glass */
+  background:
+    radial-gradient(120% 80% at 10% -30%, rgba(120,200,255,.10), transparent 40%),
+    radial-gradient(90% 80%  at 90% -10%, rgba(255,120,200,.08), transparent 55%),
+    conic-gradient(from 220deg at 50% 10%, #0b0f14 0%, #0a0e12 25%, #0b0f14 50%, #0a0d11 75%, #0b0f14 100%);
+  animation: ngHue 18s ease-in-out infinite alternate;
+}
+@keyframes ngHue{ 0%{ filter:hue-rotate(0deg) } 100%{ filter:hue-rotate(10deg) } }
+
+/* glass panel */
+.ng-panel{
+  position:absolute; inset:10px; border-radius:16px; padding:12px;
+  background:
+    linear-gradient(180deg, rgba(255,255,255,.06), rgba(255,255,255,.02)),
+    radial-gradient(140% 100% at 0% -40%, rgba(255,255,255,.10), transparent 45%),
+    linear-gradient(180deg,#0e1318,#0a0e12);
+  border:1px solid rgba(255,255,255,.08);
+  box-shadow: 0 24px 80px rgba(0,0,0,.55), inset 0 1px 0 rgba(255,255,255,.04);
+  backdrop-filter: blur(10px);
+}
+
+/* grid */
+.ng-grid{
+  display:grid; gap:10px; width:100%; height:100%;
+  grid-template-columns: repeat(5, 1fr);
+  grid-template-rows: repeat(5, 1fr);
+}
+
+/* cell button */
+.ng-cell{
+  position:relative; border-radius:12px; cursor:pointer; user-select:none;
+  background:linear-gradient(180deg, rgba(255,255,255,.05), rgba(255,255,255,.02));
+  border:1px solid rgba(255,255,255,.06);
+  box-shadow:
+    inset 0 0 0 1px rgba(255,255,255,.04),
+    0 10px 24px rgba(0,0,0,.45);
+  transition: transform .15s ease, filter .3s ease, box-shadow .3s ease, background .3s ease;
+  will-change: transform, filter; /* perf */
+}
+.ng-cell:active{ transform: translateY(1px) scale(.99); }
+
+/* OFF look */
+.ng-cell.off{
+  filter:saturate(.8) brightness(.9);
+}
+
+/* ON look: glossy neon tile */
+.ng-cell.on{
+  background:
+    linear-gradient(180deg, hsl(210 90% 74%), hsl(210 84% 60%)),
+    radial-gradient(100% 80% at 50% 0%, rgba(255,255,255,.25), transparent 60%);
+  color:#061018;
+  box-shadow:
+    0 8px 28px rgba(122,194,255,.45),
+    inset 0 1px 0 rgba(255,255,255,.28);
+}
+
+/* subtle sheen */
+.ng-cell::after{
+  content:""; position:absolute; inset:0; border-radius:inherit; pointer-events:none;
+  background:
+    linear-gradient(20deg, rgba(255,255,255,.28), transparent 40%),
+    radial-gradient(120% 90% at 50% -10%, rgba(255,255,255,.2), transparent 60%);
+  mix-blend-mode:overlay; opacity:.55;
+}
+
+/* click ripple (spawned divs) */
+.ng-ripple{
+  position:absolute; border-radius:50%; pointer-events:none; inset:auto;
+  width:10px; height:10px; left:var(--x); top:var(--y);
+  background:radial-gradient(circle, rgba(255,255,255,.75), rgba(255,255,255,0));
+  transform:translate(-50%,-50%) scale(1);
+  animation: ngRipple .6s ease-out forwards;
+}
+@keyframes ngRipple{ to{ transform:translate(-50%,-50%) scale(9); opacity:0 } }
+
+/* win banner */
+.ng-win{
+  position:absolute; z-index:7; left:50%; top:12px; transform:translateX(-50%);
+  padding:8px 14px; border-radius:12px; font-weight:900;
+  background:linear-gradient(180deg,#181b20,#0f1114);
+  border:1px solid rgba(255,255,255,.08);
+  box-shadow:0 10px 30px rgba(0,0,0,.45);
+}
+
+/* confetti bits */
+.ng-confetti{
+  position:absolute; width:6px; height:10px; border-radius:2px; z-index:10; opacity:.95;
+  animation: ngConf .9s ease-out forwards;
+}
+@keyframes ngConf{ to{ transform:translate(var(--tx), var(--ty)) rotate(420deg); opacity:0 } }
+
 /* === SIMON (lux version) === */
 .simon-wrap{
   position:relative; width:100%; height:100%; border-radius:12px; overflow:hidden;
@@ -642,6 +737,16 @@ canvas{ display:block }
     </div>
   </div>
 
+
+<!-- Add to Play overlay list (optional) -->
+<div class="tile level" style="flex:1; min-height:68px" onclick="openNightGrid()">
+  <div class="game-card">
+    <img src="img/nightgrid.png" alt="" class="game-thumb" loading="lazy"> <!-- swap to any thumbnail you like -->
+    <div class="game-title">Night Grid</div>
+  </div>
+</div>
+
+
   <div class="tile level" style="flex:1; min-height:68px" onclick="openLaneHopper()">
     <div class="game-card">
       <img src="img/lanehopper.png" alt="Lane Hopper" class="game-thumb" loading="lazy">
@@ -904,6 +1009,35 @@ canvas{ display:block }
     <p class="note">Swipe or use ◀▶▲▼. Merge tiles to reach 2048. Quit to collect chads.</p>
   </div>
 </div>
+
+
+<!-- NIGHT GRID Modal -->
+<div class="overlay" id="nightGridModal">
+  <div class="panel">
+    <div class="row">
+      <h2>Night Grid</h2>
+      <div class="row" style="gap:8px">
+        <button class="tile level" style="padding:8px 12px" id="ngStart">Start</button>
+        <button class="tile level" style="padding:8px 12px" id="ngPause">Pause</button>
+        <button class="tile level" style="padding:8px 12px" id="ngQuit">Quit</button>
+      </div>
+    </div>
+    <div class="row" style="gap:12px">
+      <div class="note">Moves: <b id="ngMoves">0</b></div>
+      <div class="note">Session chads: <b id="ngEarned">0</b></div>
+    </div>
+    <div class="game-9x16">
+      <div class="ng-wrap">
+        <div class="ng-panel">
+          <div id="ngGrid" class="ng-grid" aria-label="Night Grid board"></div>
+        </div>
+        <div id="ngBanner" class="ng-win" style="display:none">Solved! 🎉</div>
+      </div>
+    </div>
+    <p class="note">Tap a tile to toggle it and its neighbors. Turn all tiles OFF.</p>
+  </div>
+</div>
+
 
 
 <!-- ===== LANE HOPPER Modal (fixed input) ===== -->
@@ -3669,7 +3803,7 @@ updateHUD();
 
     if(step===seq.length){
       // round success ➜ +5 chads
-      earned += 15;
+      earned += 10;
       setHUD();
       setTimeout(()=> nextRound(), 420);
     }
