--- a/index.html
+++ b/index.html
@@ -904,7 +904,7 @@ canvas{ display:block }
 </div>
 
 <!-- Play Games tile (launcher) -->
-<div class="tile level" style="flex:1; min-height:68px" onclick="openNovaSweep()">
+<div class="tile level" style="flex:1; min-height:68px" onclick="openChadiliZe()">
   <div class="game-card">
     <img src="img/NovaSweep.png" alt="Minesweeper" class="game-thumb" loading="lazy">
     <div class="game-title">Nova Sweep</div>
